<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Personal Agenda</string>
    <string name="hello_world">Welcome to Your Personal Agenda! Please Sign In to begin writting</string>
     <string name="hello_note">         Welcome to Your Personal Agenda! Begin writting</string>
    <string name="action_settings">Settings</string>
    <string name="login_Button">Log In</string>
    <string name="clear_Button">Clear</string>
    <string name="save_Button">Save</string>
    <string name="username_Text">Username:</string>
    <string name="password_Text">Password:</string>
    <string name="title_activity_notes_">Notes Activity</string>

</resources>
